--- a/src/services/Gouro.Identidade.API/appsettings.Development.json
+++ b/src/services/Gouro.Identidade.API/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "Minh@Chav3$eCret@",
+    "ExpiracaoHoras": 2,
+    "Emissor": "SistemaGouro",
+    "ValidoEm": "https://localhost"
   }
 }
