--- a/src/services/Gouro.Identidade.API/appsettings.Development.json
+++ b/src/services/Gouro.Identidade.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
