--- a/src/web/Gouro.WebApp.MVC/appsettings.Development.json
+++ b/src/web/Gouro.WebApp.MVC/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AutenticacaoUrl": "https://localhost:44343",
+  "CatalogoUrl": "https://localhost:44344",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
