--- a/src/services/Gouro.Catalogo.API/appsettings.Development.json
+++ b/src/services/Gouro.Catalogo.API/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
   }
 }
