Migrar JWT para um projeto específico e apenas usá-lo nas APIs

--- a/src/services/Gouro.Catalogo.API/Gouro.Catalogo.API.csproj
+++ b/src/services/Gouro.Catalogo.API/Gouro.Catalogo.API.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\Gouro.Core\Gouro.Core.csproj" />
+    <ProjectReference Include="..\..\building blocks\Gouro.WebApi.Core\Gouro.WebApi.Core.csproj" />
   </ItemGroup>
 
 
