--- a/src/services/Gouro.Catalogo.API/appsettings.Development.json
+++ b/src/services/Gouro.Catalogo.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  "AppSettings": {
+    "Secret": "Minh@Chav3$eCret@",
+    "ExpiracaoHoras": 2,
+    "Emissor": "SistemaGouro",
+    "ValidoEm": "https://localhost"
   }
 }
