--- a/src/services/Gouro.Cliente.API/Gouro.Cliente.API.csproj
+++ b/src/services/Gouro.Cliente.API/Gouro.Cliente.API.csproj
@@ -11,5 +11,15 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\" />
+    <Folder Include="Configuration\" />
+    <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\Gouro.Core\Gouro.Core.csproj" />
+  </ItemGroup>
+
 
 </Project>
