--- a/src/services/Gouro.Cliente.API/Gouro.Clientes.API.csproj
+++ b/src/services/Gouro.Cliente.API/Gouro.Clientes.API.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -19,7 +19,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Events\" />
     <Folder Include="Application\Queries\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
