Cadastro de clientes via WebApp MVC

--- a/src/web/Gouro.WebApp.MVC/Gouro.WebApp.MVC.csproj
+++ b/src/web/Gouro.WebApp.MVC/Gouro.WebApp.MVC.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Refit" Version="6.1.15" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\Gouro.Core\Gouro.Core.csproj" />
+  </ItemGroup>
+
 </Project>
