--- a/src/building blocks/Gouro.Core/Gouro.Core.csproj
+++ b/src/building blocks/Gouro.Core/Gouro.Core.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.3.5" />
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.21" />
   </ItemGroup>
 
 </Project>
