--- a/src/services/Gouro.Cliente.API/Gouro.Clientes.API.csproj
+++ b/src/services/Gouro.Cliente.API/Gouro.Clientes.API.csproj
@@ -8,7 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="EasyNetQ" Version="6.3.1" />
 	  <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.21" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.21" />
@@ -25,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\Gouro.Core\Gouro.Core.csproj" />
+    <ProjectReference Include="..\..\building blocks\Gouro.MessageBus\Gouro.MessageBus.csproj" />
     <ProjectReference Include="..\..\building blocks\Gouro.WebApi.Core\Gouro.WebApi.Core.csproj" />
   </ItemGroup>
 
