--- a/src/web/Gouro.WebApp.MVC/Gouro.WebApp.MVC.csproj
+++ b/src/web/Gouro.WebApp.MVC/Gouro.WebApp.MVC.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\Gouro.Core\Gouro.Core.csproj" />
+    <ProjectReference Include="..\..\building blocks\Gouro.WebApi.Core\Gouro.WebApi.Core.csproj" />
   </ItemGroup>
 
 </Project>
