Adicionar URL da API Carrinho no MVC

--- a/src/web/Gouro.WebApp.MVC/appsettings.Development.json
+++ b/src/web/Gouro.WebApp.MVC/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "AutenticacaoUrl": "https://localhost:44343",
   "CatalogoUrl": "https://localhost:44368",
+  "CarrinhoUrl": "https://localhost:44321",
 
   "Logging": {
     "LogLevel": {
