--- a/src/building blocks/Gouro.WebApi.Core/Gouro.WebApi.Core.csproj
+++ b/src/building blocks/Gouro.WebApi.Core/Gouro.WebApi.Core.csproj
@@ -7,6 +7,11 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="10.3.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.21" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Gouro.Core\Gouro.Core.csproj" />
   </ItemGroup>
 
 </Project>
