--- a/src/web/Gouro.WebApp.MVC/appsettings.Development.json
+++ b/src/web/Gouro.WebApp.MVC/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "AutenticacaoUrl": "https://localhost:44343",
   "CatalogoUrl": "https://localhost:44368",
-  "CarrinhoUrl": "https://localhost:44321",
+  "ComprasBffUrl": "https://localhost:44304",
 
   "Logging": {
     "LogLevel": {
