--- a/src/services/Gouro.Pedido.API/appsettings.Development.json
+++ b/src/services/Gouro.Pedido.API/appsettings.Development.json
@@ -1,9 +1,22 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "Secret": "Minh@Chav3$eCret@",
+    "ExpiracaoHoras": 2,
+    "Emissor": "SistemaGouro",
+    "ValidoEm": "https://localhost"
   }
 }
