--- a/src/services/Gouro.Pedido.API/Dockerfile
+++ b/src/services/Gouro.Pedido.API/Dockerfile
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
-COPY ["src/services/Gouro.Pedido.API/Gouro.Pedido.API.csproj", "src/services/Gouro.Pedido.API/"]
-RUN dotnet restore "src/services/Gouro.Pedido.API/Gouro.Pedido.API.csproj"
+COPY ["src/services/Gouro.Pedidos.API/Gouro.Pedidos.API.csproj", "src/services/Gouro.Pedidos.API/"]
+RUN dotnet restore "src/services/Gouro.Pedidos.API/Gouro.Pedidos.API.csproj"
 COPY . .
-WORKDIR "/src/src/services/Gouro.Pedido.API"
-RUN dotnet build "Gouro.Pedido.API.csproj" -c Release -o /app/build
+WORKDIR "/src/src/services/Gouro.Pedidos.API"
+RUN dotnet build "Gouro.Pedidos.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Gouro.Pedido.API.csproj" -c Release -o /app/publish
+RUN dotnet publish "Gouro.Pedidos.API.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Gouro.Pedido.API.dll"]
+ENTRYPOINT ["dotnet", "Gouro.Pedidos.API.dll"]
