--- a/src/building blocks/Gouro.Core/Gouro.Core.csproj
+++ b/src/building blocks/Gouro.Core/Gouro.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="FluentValidation" Version="10.3.5" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.1.21" />
+    <PackageReference Include="NetDevPack" Version="5.3.2" />
   </ItemGroup>
 
 </Project>
