--- a/src/services/Gouro.Carrinho.API/Gouro.Carrinho.API.csproj
+++ b/src/services/Gouro.Carrinho.API/Gouro.Carrinho.API.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\Gouro.MessageBus\Gouro.MessageBus.csproj" />
     <ProjectReference Include="..\..\building blocks\Gouro.WebApi.Core\Gouro.WebApi.Core.csproj" />
   </ItemGroup>
 
