--- a/src/services/Gouro.Carrinho.API/appsettings.Development.json
+++ b/src/services/Gouro.Carrinho.API/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
   },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
