--- a/src/api gateways/Gouro.Bff.Compras/appsettings.Development.json
+++ b/src/api gateways/Gouro.Bff.Compras/appsettings.Development.json
@@ -11,6 +11,7 @@
   "CarrinhoUrl": "https://localhost:44321",
   "PedidoUrl": "https://localhost:44319",
   "PagamentoUrl": "https://localhost:44381",
+  "ClienteUrl": "https://localhost:44382",
 
   "MessageQueueConnection": {
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
