--- a/src/services/Gouro.Pagamento.API/appsettings.Development.json
+++ b/src/services/Gouro.Pagamento.API/appsettings.Development.json
@@ -5,5 +5,21 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
+  "AppSettings": {
+    "Secret": "Minh@Chav3$eCret@",
+    "ExpiracaoHoras": 2,
+    "Emissor": "SistemaGouro",
+    "ValidoEm": "https://localhost"
+  },
+  "PagamentoConfig": {
+    "DefaultApiKey": "ak_ewr4dsWehiwAT",
+    "DefaultEncryptionKey": "ek_SweRsdFas4uT5"
   }
 }
