--- a/src/services/Gouro.Pedidos.Infra/Gouro.Pedidos.Infra.csproj
+++ b/src/services/Gouro.Pedidos.Infra/Gouro.Pedidos.Infra.csproj
@@ -10,10 +10,14 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.21" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.21" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.21" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.21" />	
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.21">
+		<PrivateAssets>all</PrivateAssets>
+		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\building blocks\Gouro.Core\Gouro.Core.csproj" />
     <ProjectReference Include="..\Gouro.Pedidos.Domain\Gouro.Pedidos.Domain.csproj" />
   </ItemGroup>
 
