Fazer com que as outras APIs peguem a chave pública da API de Identidade do JWKS

--- a/src/services/Gouro.Pedido.API/appsettings.Development.json
+++ b/src/services/Gouro.Pedido.API/appsettings.Development.json
@@ -14,9 +14,6 @@
     }
   },
   "AppSettings": {
-    "Secret": "Minh@Chav3$eCret@",
-    "ExpiracaoHoras": 2,
-    "Emissor": "SistemaGouro",
-    "ValidoEm": "https://localhost"
+    "AutenticacaoJwksUrl": "https://localhost:44343/jwks"
   }
 }
