--- a/src/building blocks/Gouro.WebApi.Core/Gouro.WebApi.Core.csproj
+++ b/src/building blocks/Gouro.WebApi.Core/Gouro.WebApi.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="FluentValidation" Version="10.3.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.22" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.0" />
+    <PackageReference Include="NetDevPack.Security.JwtExtensions" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
