--- a/src/services/Gouro.Catalogo.API/appsettings.Development.json
+++ b/src/services/Gouro.Catalogo.API/appsettings.Development.json
@@ -13,9 +13,6 @@
     "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
   },
   "AppSettings": {
-    "Secret": "Minh@Chav3$eCret@",
-    "ExpiracaoHoras": 2,
-    "Emissor": "SistemaGouro",
-    "ValidoEm": "https://localhost"
+    "AutenticacaoJwksUrl": "https://localhost:44343/jwks"
   }
 }
