--- a/src/services/Gouro.Identidade.API/appsettings.Development.json
+++ b/src/services/Gouro.Identidade.API/appsettings.Development.json
@@ -1,15 +1,18 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
-  },
-  "MessageQueueConnection": {
-    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Gouro;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  },
+  "MessageQueueConnection": {
+    "MessageBus": "host=localhost:5672;publisherConfirms=true;timeout=10"
+  },
+  "AppTokenSettings": {
+    "RefreshTokenExpiration": 8
   }
 }
