--- a/src/web/Gouro.WebApp.MVC/Gouro.WebApp.MVC.csproj
+++ b/src/web/Gouro.WebApp.MVC/Gouro.WebApp.MVC.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.Core.Api" Version="2.42.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.22" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.22" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.0" />
