Renomear as pastas de algumas APIs

--- a/src/services/Gouro.Pagamentos.API/Dockerfile
+++ b/src/services/Gouro.Pagamentos.API/Dockerfile
@@ -1,18 +1,18 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
-COPY ["./services/Gouro.Pagamento.API/Gouro.Pagamentos.API.csproj", "services/Gouro.Pagamentos.API/"]
+COPY ["./services/Gouro.Pagamentos.API/Gouro.Pagamentos.API.csproj", "services/Gouro.Pagamentos.API/"]
 COPY ["./building blocks/Gouro.Core/Gouro.Core.csproj", "building blocks/Gouro.WebApi.Core/"]
 COPY ["./building blocks/Gouro.WebApi.Core/Gouro.WebApi.Core.csproj", "building blocks/Gouro.WebApi.Core/"]
 COPY ["./building blocks/Gouro.MessageBus/Gouro.MessageBus.csproj", "building blocks/Gouro.MessageBus/"]
 
-RUN dotnet restore "services/Gouro.Pagamento.API/Gouro.Pagamentos.API.csproj"
+RUN dotnet restore "services/Gouro.Pagamentos.API/Gouro.Pagamentos.API.csproj"
 COPY . .
 WORKDIR "services/Gouro.Pagamentos.API"
 RUN dotnet build "Gouro.Pagamentos.API.csproj" -c Release -o /app/build
